<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="forgot_pass">¿Olvidó su contraseña?</string>
    <string name="app_name">Te Lo Llevo Paraguaná</string>
    <string name="new_user">Nuevo usuario</string>
    <string name="h_user">Correo electrónico</string>
    <string name="h_pass">Contraseña</string>
    <string name="sing_in">Ingresar</string>
    <string name="want_go">¿Qué quieres que te llevemos hoy?</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrate</string>
    <string name="site">Sitio</string>
    <string name="product">Producto</string>
    <string name="time">Tiempo de entrega:</string>
    <string name="price">Precio</string>
    <string name="order">Ordenar</string>
    <string name="title_activity_main">main</string>
    <string name="bs">Bs.</string>
    <string name="act_search">Buscar</string>
    <string name="act_shop">Carrito</string>
    <string name="home">Inicio</string>
    <string name="orders">Pedidos</string>
    <string name="about">Acerca de</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="title_activity_profile_acrivity">ProfileAcrivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="description">Descripción</string>
    <string name="menu">Menú</string>
    <string name="lorem">Lorem ipsum etsem deu</string>
    <string name="address">Dirección</string>
    <string name="loremlarge">Lorem ipsum etsem deu lorem ipsum etsem deu orem ipsum etsem deu orem ipsum etsem deu orem ipsum etsem deu</string>
    <string name="kitechen">Tipo de cocina</string>
    <string name="pay">Tipo de pago</string>
    <string name="title_activity_process">ProcessActivity</string>
    <string name="process">Su pedido esta siendo procesado</string>
    <string name="back">Volver al inicio</string>
    <string name="detail">Detalles del pedido</string>
    <string name="menu_avaible">Menú Disponible</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="order_total">Total Pedido</string>
    <string name="my_orders">Mis pedidos</string>
    <string name="n_order">Pedido #</string>
    <string name="total">Total</string>
    <string name="date">Fecha</string>
    <string name="status">Estado</string>
    <string name="order_detail">Detalles del pedido</string>
    <string name="title_activity_shopping_car">ShoppingCarActivity</string>
    <string name="your_order">Tu pedido</string>
    <string name="title_activity_sing_up">SingUpActivity</string>
    <string name="name">Nombre Completo</string>
    <string name="mail">Email de usuario</string>
    <string name="repass">Confirme contraseña</string>
    <string name="sing_up">Registrar</string>

</resources>