


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:id="@+id/linearLayout6">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:padding="8dp"
            android:src="@drawable/ic_red_car"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_orders"
            android:textSize="18dp"
            android:textColor="@color/black_font"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:gravity="center_vertical"
        android:layout_below="@+id/linearLayout6"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/n_order"
            android:id="@+id/textView2"
            android:gravity="center"
            android:textColor="@color/font_gray"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_alignTop="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:textColor="@color/font_gray"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_alignTop="@+id/textView3"
            android:layout_toLeftOf="@+id/textView3"
            android:layout_toStartOf="@+id/textView3"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColor="@color/font_gray"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_alignTop="@+id/textView2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/textView3"
            android:gravity="center"
            android:textColor="@color/font_gray"/>

    </RelativeLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:id="@+id/listOrdersHistory"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:id="@+id/layoutOrderDetail"
        android:layout_below="@id/listOrdersHistory">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:padding="8dp"
            android:src="@drawable/ic_red_info"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail"
                android:textSize="18dp"
                android:textColor="@color/black_font"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orders"
                android:textColor="@color/black_font"/>

        </LinearLayout>
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:id="@+id/listOrdersDetail"
        android:layout_below="@+id/layoutOrderDetail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_total"
            android:id="@+id/textView"
            android:layout_marginRight="5dp"/>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:background="@drawable/border_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
