<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_launcher"
        android:layout_margin="10dp"
        android:layout_alignParentLeft="true"
        android:id="@+id/productImg" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_toRightOf="@+id/productImg"
        android:layout_toLeftOf="@+id/linearLayout4"
        android:layout_toStartOf="@+id/linearLayout4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/siteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/site"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/black_item_prod"/>

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:layout_centerVertical="true"
            android:layout_marginTop="1dp"
            android:textColor="@color/black_item_prod"/>

        <TextView
            android:id="@+id/timeDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/time"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/gray_item_prod"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:id="@+id/linearLayout4"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/price"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black_item_prod"/>

        <Button
            android:id="@+id/orderButton"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/order"
            style="@style/btn_yellow"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"/>

    </LinearLayout>

</RelativeLayout>