<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:id="@+id/linearLayout6"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:padding="8dp"
            android:src="@drawable/ic_red_car"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_order"
            android:textSize="18dp"
            android:textColor="@color/black_font"/>

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/listOrdersDetail"
        android:layout_below="@+id/linearLayout6"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right|center_vertical"
        android:paddingRight="15dp"
        android:layout_below="@+id/listOrdersDetail">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_total"
            android:id="@+id/textView"
            android:layout_marginRight="5dp"/>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:background="@drawable/border_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"/>

        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/goBackButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/back"
        style="@style/btn_yellow"
        android:textSize="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>
