<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.slice_group.telollevoparaguana.ProcessActivity">

    <ImageView
        android:id="@+id/img_logo_process"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo_si"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/process"
        android:layout_below="@+id/img_logo_process"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:textColor="@color/black_font"/>

    <Button
        android:id="@+id/datailButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/detail"
        style="@style/btn_yellow"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:layout_above="@+id/goBackButton"
        android:layout_alignLeft="@+id/goBackButton"
        android:layout_alignStart="@+id/goBackButton"
        android:layout_marginBottom="15dp" />


    <Button
        android:id="@+id/goBackButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/back"
        style="@style/btn_yellow"
        android:textSize="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"/>

</RelativeLayout>
