<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@android:color/transparent">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_selected"
        android:layout_margin="10dp"
        android:layout_alignParentLeft="true"
        android:id="@+id/selectImg"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_toRightOf="@+id/selectImg"
        android:layout_toLeftOf="@+id/linearLayout4"
        android:layout_toStartOf="@+id/linearLayout4"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/siteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:text="@string/site"
            android:textColor="@color/black_item_prod"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:id="@+id/linearLayout4"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/price"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black_item_prod"/>

        <Button
            android:id="@+id/orderButton"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/order"
            style="@style/btn_yellow"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"/>

    </LinearLayout>

</RelativeLayout>